# qtads

./: .gitignore  CMakeLists.txt  CMakeSettings.json  resources.rc  vcpkg.json
dap/: dap.cpp  dapglobals.h  example.cpp
src/: main.cc  missing.cc  missing.h  osqt.cc  osqt.h
src/hack/: unistd.h
tads2/: osifc.h
tads3/: vmdbg.cpp  vmmcreg.cpp
unittests/: CMakeLists.txt  ProcessHandler.cpp  ProcessHandler.h  Setup.cpp  initializationtests.cpp  unittests.cmake  vcpkg.json
unittests/teststories/: BreakpointTest.t  MakeAll.bat
